Correction d'alignement au format tablette sur la page principale (section fonctionnement)

--- a/sass/layout/_functioning.scss
+++ b/sass/layout/_functioning.scss
@@ -52,9 +52,9 @@
 }
 
 // BREAKPOINT DESKTOP FONCTIONNEMENT
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1036px) {
     .functioning{
-        max-width: 1024px;
+        max-width: 1036px;
         margin: auto;
     }
     .functioning-insert{
